--- a/src/CoralScrum/MainBundle/Resources/views/Sprint/show.html.twig
+++ b/src/CoralScrum/MainBundle/Resources/views/Sprint/show.html.twig
@@ -12,6 +12,12 @@
     </h1>
     <h3><span class="bold">Start Date:</span> {{ entity.startDate|date('d M Y H:i') }}</h3>
     <h3><span class="bold">Duration:</span> {{ entity.duration }} {{ entity.duration == 1 ? 'day' : 'days' }}</h3>
+    {% set sprintDifficulty = 0 %}
+    {% for userstory in entity.userstory %}
+        {% set sprintDifficulty = sprintDifficulty + userstory.difficulty %}
+    {% endfor %}
+    <h3><span class="bold">Sprint difficulty:</span> {{ sprintDifficulty }}</h3>
+
 
     {% if isGranted and isSprintFinished == false -%}
     <a class="button" href="{{ path('task_new', { 'projectId': projectId, 'sprintId': sprintId }) }}">Create a new Task</a>
