--- a/src/CoralScrum/MainBundle/Resources/views/Sprint/stats.html.twig
+++ b/src/CoralScrum/MainBundle/Resources/views/Sprint/stats.html.twig
@@ -9,10 +9,17 @@
 
     <h3><span class="bold">Start Date:</span> {{ entity.startDate|date('d M Y H:i') }}</h3>
     <h3><span class="bold">Duration:</span> {{ entity.duration }} {{ entity.duration == 1 ? 'day' : 'days' }}</h3>
+    {% set sprintDifficulty = 0 %}
+    {% for userstory in entity.userstory %}
+        {% set sprintDifficulty = sprintDifficulty + userstory.difficulty %}
+    {% endfor %}
+    <h3><span class="bold">Sprint difficulty:</span> {{ sprintDifficulty }}</h3>
 
-    <div class="chart">
-        <h2 class="chartTitle">Burndown Chart</h2>
+    <div class="chart BurndownTask floatLeft">
+        <h2 class="chartTitle">Burndown Chart (Sum of Task Estimates)</h2>
     </div>
+
+    <div class="clear"></div>
 
     {% if userContributionsTaskInProgress -%}
     <div class="donut userTaskInProgress floatLeft">
@@ -36,7 +43,7 @@
     <script src="{{ asset('js/d3.v3.min.js') }}" type="text/javascript"></script>
     <script>
         var data = [
-            {%- for val in burnDownData -%}
+            {%- for val in burndownData -%}
                 {%- if not loop.first -%}
                     , 
                 {% endif -%}
@@ -45,36 +52,36 @@
         ];
 
 
-/* Burndown Chart
+/* Burndown Chart Task Estimates
 --------------------------------------------------------------------------------------------------*/
         var margin = {top: 30, right: 30, bottom: 50, left: 50},
-            width = 500 - margin.left - margin.right,
+            width = 490 - margin.left - margin.right,
             height = 300 - margin.top - margin.bottom;
 
 
         var x = d3.scale.linear().domain([0, {{ entity.duration }}]).range([0, width]),
-            y = d3.scale.linear().domain([0, {{ burnDownTotalDuration }}]).range([height, 0]);
+            y = d3.scale.linear().domain([0, {{ burndownTotalDuration }}]).range([height, 0]);
             xAxis = d3.svg.axis().scale(x).ticks(10)
                       .tickFormat(d3.format("d"))
                         .tickSubdivide(0),
             yAxis = d3.svg.axis().scale(y).ticks(10).orient("left")
                       .tickFormat(d3.format("d"))
                         .tickSubdivide(0);
-            
 
-        var svg = d3.select(".chart").append("svg")
+
+        var svg = d3.select(".BurndownTask").append("svg")
               .attr("width", width + margin.left + margin.right)
               .attr("height", height + margin.top + margin.bottom);
 
 
         // horizontal lines
-        svg.selectAll(".hline").data(d3.range({{ burnDownTotalDuration }})).enter()
+        svg.selectAll(".hline").data(d3.range({{ burndownTotalDuration }})).enter()
             .append("line")
             .attr("y1", function (d) {
-            return d * (height / {{ burnDownTotalDuration }});
+            return d * (height / {{ burndownTotalDuration }});
         })
             .attr("y2", function (d) {
-            return d * (height / {{ burnDownTotalDuration }});
+            return d * (height / {{ burndownTotalDuration }});
         })
             .attr("x1", function (d) {
             return 0;
